--- a/css/b_login.css
+++ b/css/b_login.css
@@ -3,8 +3,12 @@
     height: 98px;
     margin: 0 auto;
 }
-.logo{
+.b_logo{
     width: 200px;
     height: 98px;
     background: url(https://account.xiaomi.com/static/res/7f6f2f5/account-static/respassport/acc-2014/img/mistore_logo.png) no-repeat;
+}
+.b_content{
+    height: 588px;
+    background: url(https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/e8201bfbb8c9d474a48da76f7d81a5c7.jpg) no-repeat -300px 0;
 }
