--- a/css/b_login.css
+++ b/css/b_login.css
@@ -10,5 +10,72 @@
 }
 .b_content{
     height: 588px;
-    background: url(https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/e8201bfbb8c9d474a48da76f7d81a5c7.jpg) no-repeat -300px 0;
+    background: url(https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/e8201bfbb8c9d474a48da76f7d81a5c7.jpg) no-repeat;
+}
+.b_banner{
+    height: 100%;
+    width: 1130px;
+    margin: 0 auto;
+    position: relative;
+    background: url(https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/e8201bfbb8c9d474a48da76f7d81a5c7.jpg) no-repeat -713px 0;
+}
+.b_logobox{
+    width: 410px;
+    height: 556px;
+    background: #fff;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+.b_btn{
+    width: 100%;
+    height: 82px;
+    text-align: center;
+    line-height: 82px;
+}
+.b_btn span{
+    width: 1px;
+    height: 24px;
+    border: 1px solid #e0e0e0;
+    margin-left:35px ;
+    margin-right: 42px;
+}
+.b_btn a{
+    font-size: 24px;
+    color: #666;
+}
+.b_btn a:hover{
+    color: #f56600;
+}
+.b_btn1Box{
+    width: 100%;
+    height: 415px;
+}
+.b_inp{
+    width: 348px;
+    height: 124px;
+    margin:  0 auto;
+    margin-top: 10px;
+}
+.b_inp input{
+    width: 306px;
+    height: 22px;
+    padding: 13px 24px 13px 14px;
+    line-height: 22px;
+    margin-bottom: 14px;
+}
+.b_logo_btn{
+    width: 348px;
+    height: 50px;
+    background: #ff6700;
+    text-align: center;
+    line-height: 50px;
+    margin: 0 auto;
+    margin-top: 14px;
+    margin-bottom: 14px;
+    cursor: pointer;
+    font-size: 14px;
+}
+.b_logo_btn a{
+    color: #fff;
 }
