--- a/css/b_login.css
+++ b/css/b_login.css
@@ -50,6 +50,10 @@
 .b_btn1Box{
     width: 100%;
     height: 415px;
+    display: none;
+}
+.col{
+    color: #f56600 !important;
 }
 .b_inp{
     width: 348px;
@@ -78,4 +82,106 @@
 }
 .b_logo_btn a{
     color: #fff;
+}
+.b_span{
+    width: 348px;
+    margin: 0 auto;
+    margin-bottom: 120px;
+}
+.b_a1{
+    float: left;
+}
+.b_a1 a{
+    color: #ff6700;
+}
+.b_span span{
+    color: #999;
+}
+.b_span a{
+    font-size: 14px;
+}
+.b_a2{
+    float: right;
+}
+.b_a2 a:hover{
+    color: #ff6700;
+}
+.b_hr{
+    width: 348px;
+    margin: 0 auto;
+    color: #bbb;
+    position: relative;
+}
+.b_hr span{
+    padding: 0 8px;
+    background: #fff;
+    position: absolute;
+    top: -8px;
+    left: 133px;
+}
+.b_icon{
+    width: 348px;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 20px;
+}
+.b_icon a{
+    margin: 0 17px;
+}
+.b_icon .icon-QQ{
+    color: rgb(2,136,209);
+    font-size: 35px;
+}
+.b_icon .icon-weibo{
+    color: rgb(211,47,47);
+    font-size: 35px;
+}
+.b_icon .icon-zhifubao{
+    color: rgb(2,136,209);
+    font-size: 35px;
+}
+.b_icon .icon-weixin{
+    color: rgb(0,210,13);
+    font-size: 35px;
+}
+.active{
+    display: block !important;
+}
+.b_btn2Box{
+    width: 302.5px;
+    height: 183px;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 140px;
+    display: none;
+}
+.b_ma{
+    margin-bottom: 15px;
+}
+.b_p{
+    text-align: center;
+    font-size: 14px;
+    color: #747474;
+}
+.b_p p{
+    margin-bottom: 5px;
+}
+.b_p span{
+    color: #ff6700;
+}
+.b_footer{
+    text-align: center;
+    margin-top: 100px;
+}
+.b_a{
+    text-align: center;
+}
+.b_a a{
+    font-size: 14px;
+    margin: 0 10px;
+}
+.b_footer p{
+    font-size: 14px;
+    color: #757575;
+    margin-top: 10px;
 }
