--- a/css/b_shopcar.css
+++ b/css/b_shopcar.css
@@ -406,6 +406,48 @@ body{
     color: #fff;
     cursor: pointer;
 }
+.b_jiesuan{
+    width: 1226px;
+    height: 50px;
+    background: #fff;
+    margin-top: 20px;
+    line-height: 50px;
+}
+.b_jiesuan a:nth-of-type(1){
+    margin-left: 32px;
+    font-size: 14px;
+    color: #757575;
+}
+.b_jiesuan a:nth-of-type(1):hover{
+    color: #ff6700;
+}
+.b_jiesuan span{
+    padding-left: 16px;
+    margin-left: 16px;
+    color: #757575;
+    font-size: 14px;
+}
+.b_jiesuan span i{
+    color: #ff6700;
+}
+.b_jiesuan div{
+    display: inline-block;
+    font-size: 14px;
+    color: #ff6700;
+    margin-left: 600px;
+}
+.b_jiesuan a:nth-of-type(2){
+    float: right;
+    margin-left: 32px;
+    font-size: 14px;
+    color: #FFF;
+    width: 200px;
+    height: 48px;
+    background: #ff6700;
+    font-size: 18px;
+    line-height: 48px;
+    text-align: center;
+}
 
 /* 尾部 */
 .bg_foot{
